--- a/TestParse/Base.lproj/Main.storyboard
+++ b/TestParse/Base.lproj/Main.storyboard
@@ -324,7 +324,7 @@
         <!--Photos Collection View Controller-->
         <scene sceneID="kCa-Fx-KQJ">
             <objects>
-                <collectionViewController autoresizesArchivedViewToFullSize="NO" hidesBottomBarWhenPushed="YES" id="bwP-Lx-Jsp" customClass="PhotosCollectionViewController" sceneMemberID="viewController">
+                <collectionViewController storyboardIdentifier="PhotosCollectionEvent" autoresizesArchivedViewToFullSize="NO" hidesBottomBarWhenPushed="YES" id="bwP-Lx-Jsp" customClass="PhotosCollectionViewController" sceneMemberID="viewController">
                     <collectionView key="view" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="cT6-yc-yMB">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -655,6 +655,10 @@
                                                 <segue destination="Ql9-kg-sax" kind="push" identifier="Invited" id="Z1a-LW-zkh"/>
                                             </connections>
                                         </button>
+                                        <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gUO-dY-1k6">
+                                            <rect key="frame" x="0.0" y="274" width="320" height="150"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
+                                        </mapView>
                                     </subviews>
                                     <color key="backgroundColor" red="0.95675223210000004" green="0.95675223210000004" blue="0.95675223210000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <gestureRecognizers/>
@@ -727,6 +731,7 @@
                                 <outlet property="labelHide" destination="47d-Kt-YZl" id="ICR-zc-Qnz"/>
                                 <outlet property="locationLabel" destination="wQs-a4-1Fs" id="JG7-Ca-mE4"/>
                                 <outlet property="mapButton" destination="bWU-EA-Eqm" id="PzM-Wd-hC0"/>
+                                <outlet property="mapView" destination="gUO-dY-1k6" id="IQT-on-n2w"/>
                                 <outlet property="nameEvent" destination="m30-ZG-H3s" id="ibN-Dl-eWu"/>
                                 <outlet property="nbPhotosLabel" destination="GHo-z7-rPw" id="FBG-0l-AWu"/>
                                 <outlet property="nbTotalInvitedLabel" destination="JbC-uX-IpG" id="k0k-lr-Ici"/>
@@ -867,7 +872,7 @@
                                 <rect key="frame" x="16" y="7" width="40" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="tintColor" red="0.95675223210000004" green="0.95675223210000004" blue="0.95675223210000004" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" image="settings.png"/>
+                                <state key="normal" image="settings"/>
                                 <connections>
                                     <segue destination="2d6-q4-Sf3" kind="modal" identifier="Login" id="6Q5-bW-2c4"/>
                                 </connections>
@@ -878,7 +883,7 @@
                                 <rect key="frame" x="264" y="7" width="40" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                <state key="normal" image="refresh.png">
+                                <state key="normal" image="refresh">
                                     <color key="titleColor" red="0.95675223210000004" green="0.95675223210000004" blue="0.95675223210000004" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -1968,6 +1973,7 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="dateLabel" destination="75V-xS-Zg7" id="QT2-P7-vjB"/>
                         <outlet property="invitedLabel" destination="kln-HF-h2M" id="8Vl-WI-Jf8"/>
@@ -2121,26 +2127,60 @@
                         <viewControllerLayoutGuide type="bottom" id="E76-J3-R8N"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="lGR-W3-g70">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" fixedFrame="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="NRp-yN-GxC">
-                                <rect key="frame" x="41" y="296" width="244" height="2"/>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" ambiguous="YES" misplaced="YES" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="NRp-yN-GxC">
+                                <rect key="frame" x="44" y="406" width="244" height="2"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="tintColor" red="1" green="0.62745100259999997" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
                             </progressView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N4T-F6-794">
-                                <rect key="frame" x="118" y="239" width="82" height="21"/>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="N4T-F6-794">
+                                <rect key="frame" x="119" y="362" width="82" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.43137254899999999" green="0.43529411759999997" blue="0.4549019608" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lTQ-lH-f9P">
+                                <rect key="frame" x="119" y="429" width="82" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="0.62745100259999997" blue="0.0" alpha="1" colorSpace="deviceRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="marmotte" translatesAutoresizingMaskIntoConstraints="NO" id="ycG-Ts-BPH">
+                                <rect key="frame" x="101" y="155" width="119" height="120"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Emballage de vos photos ..." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cJb-Rc-LZB">
+                                <rect key="frame" x="59" y="102" width="214" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.43137254899999999" green="0.43529411759999997" blue="0.4549019608" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Notre marmotte s'occupe de ranger vos photos dans son terrier !" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="256" translatesAutoresizingMaskIntoConstraints="NO" id="o1t-nb-84J">
+                                <rect key="frame" x="32" y="301" width="256" height="41"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.43137254899999999" green="0.43529411759999997" blue="0.4549019608" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="E76-J3-R8N" firstAttribute="top" secondItem="NRp-yN-GxC" secondAttribute="bottom" constant="72" id="4NL-He-4lL"/>
+                            <constraint firstItem="E76-J3-R8N" firstAttribute="top" secondItem="N4T-F6-794" secondAttribute="bottom" constant="97" id="FBL-4e-9NE"/>
+                            <constraint firstItem="E76-J3-R8N" firstAttribute="top" secondItem="lTQ-lH-f9P" secondAttribute="bottom" constant="30" id="kwA-L0-AEC"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="oLn-gm-HFp"/>
+                    <nil key="simulatedBottomBarMetrics"/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <connections>
                         <outlet property="nbPhotosLabel" destination="N4T-F6-794" id="asQ-78-xwB"/>
+                        <outlet property="percentIndicator" destination="lTQ-lH-f9P" id="hkA-9c-sdY"/>
                         <outlet property="progessView" destination="NRp-yN-GxC" id="kE4-bl-ZP6"/>
                     </connections>
                 </viewController>
@@ -2238,7 +2278,7 @@
         <!--Photo Detail View Controller-->
         <scene sceneID="8kY-Gl-Vpw">
             <objects>
-                <viewController id="GWE-cV-T3J" customClass="PhotoDetailViewController" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="PhotoDetail" id="GWE-cV-T3J" customClass="PhotoDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2dM-J1-SbO"/>
                         <viewControllerLayoutGuide type="bottom" id="6Le-TQ-Hff"/>
@@ -2367,14 +2407,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" text="Adrien DUlong" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y0h-To-W5d">
-                                                    <rect key="frame" x="10" y="-6" width="293" height="45"/>
-                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                    <color key="backgroundColor" red="0.95675223210000004" green="0.95675223210000004" blue="0.95675223210000004" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                    <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                </textView>
-                                                <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQa-Az-dAa">
-                                                    <rect key="frame" x="10" y="43" width="293" height="44"/>
+                                                    <rect key="frame" x="8" y="3" width="305" height="63"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <color key="backgroundColor" red="0.95675223210000004" green="0.95675223210000004" blue="0.95675223210000004" alpha="1" colorSpace="calibratedRGB"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
@@ -2385,8 +2418,7 @@
                                         <color key="backgroundColor" red="0.96470588239999999" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
                                         <rect key="contentStretch" x="1.3877787807814457e-17" y="0.0" width="1" height="1"/>
                                         <connections>
-                                            <outlet property="likers" destination="y0h-To-W5d" id="2QJ-k6-It2"/>
-                                            <outlet property="titleComment" destination="BQa-Az-dAa" id="MFo-9C-Z10"/>
+                                            <outlet property="titleComment" destination="y0h-To-W5d" id="j49-um-msI"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -2578,18 +2610,19 @@
         <image name="magicwand" width="21" height="19"/>
         <image name="magicwand_white" width="21" height="19"/>
         <image name="map_pin" width="16" height="16"/>
+        <image name="marmotte" width="119" height="120"/>
         <image name="memories_on.png" width="26" height="26"/>
         <image name="my_events_on.png" width="23" height="23"/>
         <image name="next_cover" width="10" height="16"/>
         <image name="next_gris" width="8" height="14"/>
         <image name="next_orange" width="8" height="14"/>
+        <image name="refresh" width="17" height="18"/>
         <image name="refresh.png" width="17" height="18"/>
         <image name="reverse_cam" width="20" height="20"/>
         <image name="semi_separate" width="273" height="1"/>
         <image name="separate" width="320" height="1"/>
         <image name="separate_vertical" width="1" height="121"/>
         <image name="settings" width="18" height="18"/>
-        <image name="settings.png" width="18" height="18"/>
         <image name="tuto_step_1" width="170" height="170"/>
         <image name="tw_off_share" width="21" height="14"/>
         <image name="uncheck" width="20" height="21"/>
@@ -2602,9 +2635,9 @@
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="pId-s9-PUV"/>
-        <segue reference="EkG-m5-ZxD"/>
-        <segue reference="pYD-9M-pFo"/>
+        <segue reference="kaB-St-iPu"/>
         <segue reference="6xL-71-AeC"/>
         <segue reference="17P-5b-VHW"/>
+        <segue reference="e9E-5w-t1P"/>
     </inferredMetricsTieBreakers>
 </document>
